--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -92,7 +92,7 @@
 		<maven.shade.version>3.6.0</maven.shade.version>
 		<!-- ↓ not used by us; insecure dependencies -->
 		<maven.site.version>3.12.1</maven.site.version>
-		<maven.source.version>3.2.1</maven.source.version>
+		<maven.source.version>3.3.1</maven.source.version>
 		<maven.surefire.version>3.3.0</maven.surefire.version>
 		<maven.war.version>3.4.0</maven.war.version>
 		<!-- ‣ dependency management -->
@@ -726,10 +726,9 @@
 							<version>${mvnplugindep.commons-compress}</version>
 						</dependency>
 						<dependency>
-							<!-- https://github.com/codehaus-plexus/plexus-archiver/issues/160 -->
-							<groupId>org.evolvis.tartools.forked</groupId>
-							<artifactId>plexus-archiver-4.2.1</artifactId>
-							<version>2</version>
+							<groupId>org.codehaus.plexus</groupId>
+							<artifactId>plexus-archiver</artifactId>
+							<version>${mvnplugindep.plexus-archiver}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
