--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -65,7 +65,7 @@
 		<!-- for many -->
 		<mvnplugindep.commons-compress>1.26.2</mvnplugindep.commons-compress>
 		<mvnplugindep.commons-io>2.16.1</mvnplugindep.commons-io>
-		<mvnplugindep.plexus-archiver>4.9.2</mvnplugindep.plexus-archiver>
+		<mvnplugindep.plexus-archiver>4.10.0</mvnplugindep.plexus-archiver>
 		<!-- retrofitting for older ones -->
 		<mvnplugindep.plexus-utils.old>3.0.24</mvnplugindep.plexus-utils.old>
 		<!-- ‣ maven plugins -->
@@ -88,14 +88,15 @@
 		<maven.jar.version>3.4.2</maven.jar.version>
 		<maven.javadoc.version>3.7.0</maven.javadoc.version>
 		<maven.latex.version>1.4.5</maven.latex.version>
-		<maven.release.version>3.1.0</maven.release.version>
+		<maven.release.version>3.1.1</maven.release.version>
 		<!-- due to MRESOURCES-237 and MSHARED-325 -->
 		<maven.resources.version>2.6</maven.resources.version>
 		<maven.shade.version>3.6.0</maven.shade.version>
 		<!-- ↓ not used by us; insecure dependencies -->
 		<maven.site.version>3.12.1</maven.site.version>
+		<!-- due to symlink issues, like MRESOURCE -->
 		<maven.source.version>3.2.1</maven.source.version>
-		<maven.surefire.version>3.3.0</maven.surefire.version>
+		<maven.surefire.version>3.3.1</maven.surefire.version>
 		<maven.war.version>3.4.0</maven.war.version>
 		<!-- ‣ dependency management -->
 		<guava.version>33.2.1-jre</guava.version>
